force-app/main/default/objects/breg_Log__c/breg_Log__c.object-meta.xml
<CustomObject>
    <description>Aalta BREGMO-57</description>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>