force-app/main/default/objects/breg_Log__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREGMO-57</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>breg_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>