force-app/main/default/objects/breg_Log__c/fields/breg_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>breg_Error_Message__c</fullName>
    <description>Aalta BREG-5135</description>
    <label>Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>