force-app/main/default/objects/breg_Log__c/fields/breg_Link_to_Related_Record__c.field-meta.xml
<CustomField>
    <fullName>breg_Link_to_Related_Record__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND(&quot;/services&quot;, $Api.Partner_Server_URL_260)) &amp;   breg_Related_Record_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Related Record</label>
    <type>Text</type>
</CustomField>