force-app/main/default/objects/breg_Log__c/fields/breg_Object__c.field-meta.xml
<CustomField>
    <fullName>breg_Object__c</fullName>
    <description>Aalta BREG-5135</description>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>