force-app/main/default/objects/breg_Log__c/fields/breg_Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>breg_Related_Record_Id__c</fullName>
    <description>Aalta BREG-5135 - Used to save related Custom Metadata record id</description>
    <label>Related Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>