force-app/main/default/objects/breg_Log__c/fields/breg_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>breg_Stack_Trace__c</fullName>
    <description>Aalta BREG-5135</description>
    <label>Stack Trace</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>