force-app/main/default/objects/breg_Log__c/fields/breg_Started_By_User__c.field-meta.xml
<CustomField>
    <fullName>breg_Started_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREGMO-57</description>
    <label>Started By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>breg_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>