force-app/main/default/objects/breg_Log__c/fields/breg_Started_From__c.field-meta.xml
<CustomField>
    <fullName>breg_Started_From__c</fullName>
    <description>Aalta BREGMO-57</description>
    <inlineHelpText>Which process starts this workflow?</inlineHelpText>
    <label>Started From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>