force-app/main/default/objects/breg_Log__c/fields/breg_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Status__c</fullName>
    <description>Aalta BREG-5135</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>