force-app/main/default/objects/breg_Log__c/fields/breg_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Type__c</fullName>
    <description>Aalta BREGMO-57</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Generation</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>