force-app/main/default/objects/breg_Log__c/fields/breg_Workflow_Activity_Link__c.field-meta.xml
<CustomField>
    <fullName>breg_Workflow_Activity_Link__c</fullName>
    <description>Aalta BREGMO-57</description>
    <label>Workflow Activity Link</label>
    <type>Url</type>
</CustomField>