force-app/main/default/objects/breg_Log__c/fields/breg_Workflow_Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>breg_Workflow_Instance_Id__c</fullName>
    <description>Aalta BREGMO-57</description>
    <label>Workflow Instance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>