force-app/main/default/objects/breg_Log__c/fields/breg_Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Workflow_Status__c</fullName>
    <description>Aalta BREGMO-57</description>
    <label>Workflow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executing</fullName>
                <default>true</default>
                <label>Executing</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>