force-app/main/default/objects/breg_Log__c/recordTypes/breg_Document_Generation_log.recordType-meta.xml
<RecordType>
    <fullName>breg_Document_Generation_log</fullName>
    <active>true</active>
    <label>Document Generation log</label>
</RecordType>