force-app/main/default/objects/breg_Log__c/recordTypes/breg_Error_Log.recordType-meta.xml
<RecordType>
    <fullName>breg_Error_Log</fullName>
    <active>true</active>
    <label>Error Log</label>
</RecordType>